[MODIFIED] All images from .png to .jp2 format for smaller memory storage. [REMOVED] backdrop-filter property from the background image and just blurred the image pre-loading as the property was causing formatting issues. [ADDED] sitemap.xml

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -50,16 +50,18 @@
 body {
     width: 100%;
     min-height: 100%;
-    height: auto;
+    height: fit-content;
     margin: 0;
     padding: 0;
     border: 0;
-    background-image: url('/assets/images/lance/lance-ocean-centered-1.jpg');
+    background-image: url('/assets/images/lance/lance-ocean-centered-1-blurred.jp2');
     background-position: top center;
     background-attachment: fixed;
     background-size: var(--background-size);
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
+}
+
+.pre-load {
+    overflow: hidden;
 }
 
 #loading-wrapper {
@@ -150,6 +152,7 @@ body {
     --album-image-margin: 15%;
     --video-container-width: 80%;
     --background-size: auto 100%;
+    --featured-container-top-margin: 15%;
 }
 
 .top-mobile {
@@ -171,6 +174,7 @@ body {
     --album-image-margin: 2.9166666667%;
     --video-container-width: 60%;
     --background-size: cover;
+    --featured-container-top-margin: 5%;
 }
 
 .top-desktop {
@@ -328,8 +332,8 @@ body {
     font-size: 4.5vmax;
     letter-spacing: 0.2vmax;
     font-weight: 1;
-    margin-block-start: 2vmax;
-    margin-block-end: 2vmax;
+    margin-top: 2vmax;
+    margin-bottom: 2vmax;
     display: inline-block;
 }
 
@@ -341,12 +345,13 @@ body {
     width: 100%;
     height: fit-content;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     text-align: center;
 }
 
 #featured-content {
+    margin-top: var(--featured-container-top-margin);
     width: fit-content;
     height: fit-content;
     padding: 2vh 2vw;
@@ -354,8 +359,8 @@ body {
 
 #featured-content h2 {
     font-size: 7vmax;
-    margin-block-start: 0;
-    margin-block-end: 1vh;
+    margin-top: 0;
+    margin-bottom: 1vh;
     font-weight: normal;
     letter-spacing: 0.6vmax;
 }
@@ -379,8 +384,8 @@ body {
 #featured-content h4 {
     cursor: pointer;
     font-size: 2.5vmax;
-    margin-block-start: 0;
-    margin-block-end: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     font-weight: normal;
 }
 
